<resources>
    <string name="app_name">Worldquiz</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Tablas</string>
    <string name="title_ranking">Ranking</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="nombre">Nombre:</string>
    <string name="capital">Capital:</string>
    <string name="region">Región:</string>
    <string name="population">Población:</string>
    <string name="area">Extensión:</string>
    <string name="location">Localización:</string>
    <string name="title_activity_detalle">DetalleActivity</string>
    <string name="menu_tittle_user">Mi usuario</string>
    <string name="content_description_image_view">Imagen cargada por la app</string>
    <string name="text_username_tittle">Usuario:</string>
    <string name="text_email_tittle">Email:</string>
    <string name="menu_tittle_log_out">Cerrar Sesión</string>
    <string name="menu_tittle_quiz">Hacer quiz</string>
    <string name="btn_finish_quiz">Terminar quiz</string>
    <string name="filter">Filtrar..</string>
    <string name="effectivity">Efectividad</string>
    <string name="score">Puntuación</string>
    <string name="country">Países</string>
    <string name="map">Mapa</string>
    <string name="filteringS">Filtrar por Puntuación</string>
    <string name="filteringE">Filtrar por Efectividad</string>
    <string name="btn_next_question">Siguiente</string>
    <string name="tittle_question_one">¿Cual es la capital de </string>
    <string name="tittle_question_two">¿Cual es la moneda de </string>
    <string name="tittle_question_three">¿Que país es limítrofe a </string>
    <string name="tittle_question_four">¿De que país es la bandera </string>
    <string name="tittle_question_five">¿Cual es el idioma de </string>
    <string name="dont_have_border">No tiene</string>
    <string name="quit">¿Quieres salir del quiz?</string>
    <string name="really_quit">Si sales del quiz contará como una partida jugada pero con una puntuación de 0.</string>
    <string name="yes">Sí, salir</string>
    <string name="no">No, seguir jugando</string>
    <string name="txt_end_quiz">¡Enhorabuena, has terminado el test!</string>
    <string name="txt_puntuation">Puntuación:</string>
    <string name="puntos">Puntos</string>
    <string name="txt_correct_answers">Respuestas correctas:</string>
    <string name="question">preguntas</string>
    <string name="btn_back_to_menu">Volver al menú</string>
    <string name="coin">Filtrar por Moneda</string>
    <string name="countryFilter">Filtar por Moneda</string>
    <string name="countryFilter2">Filtrar por Idioma</string>
    <string name="hintSearch">Nombre, idioma, moneda...</string>
    <string name="search">Buscar</string>
    <string name="txt_games_played">Partidas jugadas:</string>
</resources>
