<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".QuizEndedActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/finishAnimation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textViewGratsEndQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_end_quiz"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/finishAnimation"
        app:layout_constraintStart_toStartOf="@+id/finishAnimation"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsernameQuizEnd" />

    <TextView
        android:id="@+id/textViewPuntuationEndQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_puntuation"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewGratsEndQuiz"
        app:layout_constraintTop_toBottomOf="@+id/textViewGratsEndQuiz" />

    <TextView
        android:id="@+id/textViewPuntuationObtainedEndQuiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewPuntuationEndQuiz"
        app:layout_constraintTop_toBottomOf="@+id/textViewPuntuationEndQuiz" />

    <TextView
        android:id="@+id/textViewCorrectAnswersEndQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_correct_answers"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewPuntuationEndQuiz"
        app:layout_constraintTop_toBottomOf="@+id/textViewPuntuationObtainedEndQuiz" />

    <TextView
        android:id="@+id/textViewNumberOfCorrectAnswersEndQuiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewCorrectAnswersEndQuiz"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorrectAnswersEndQuiz" />

    <TextView
        android:id="@+id/textViewUsernameQuizEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/finishAnimation"
        app:layout_constraintStart_toStartOf="@+id/finishAnimation"
        app:layout_constraintTop_toBottomOf="@+id/finishAnimation" />

    <Button
        android:id="@+id/buttonGoToMenuEndQuiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_blue_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btn_back_to_menu"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>